--- a/catalog/templates/main/index.html
+++ b/catalog/templates/main/index.html
@@ -28,7 +28,7 @@
 
                             <p>
                                 Описание:{{ item.description|slice:":100"}}
-                            <img src="{% mediapath item.preview %}"/>
+                            <img src="{% mediapath item.preview %}" width="155" height="120"/>
                             </p>
                             <button type="button" class="btn btn-success">Купить</button>
                         </div>
