--- a/catalog/templates/main/card.html
+++ b/catalog/templates/main/card.html
@@ -1,37 +1,38 @@
 {% extends "main/base.html" %}
-{% load catalog_tags %}
+  {% load catalog_tags %}
 {% block content %}
+
     <div class="col">
             <div class="card">
                 <div class="card-body">
                     <table class="table table-dark table-sm">
                         <tr>
                             <td>Название продукта</td>
-                            <td>{{ cards.name }} </td>
+                            <td>{{ card.name }} </td>
                         </tr>
                         <tr>
                             <td>Описание продукта</td>
-                            <td>{{ cards.description }}</td>
+                            <td>{{ card.description }}</td>
                         </tr>
                         <tr>
                             <td>Категория</td>
-                            <td>{{ cards.category }}</td>
+                            <td>{{ card.category }}</td>
                         </tr>
                         <tr>
                             <td>Цена продукта:</td>
-                            <td>{{ cards.price }}</td>
+                            <td>{{ card.price }}</td>
                         </tr>
                         <tr>
                             <td>Дата добавления:</td>
-                            <td>{{ cards.creation_date}}</td>
+                            <td>{{ card.creation_date}}</td>
                         </tr>
                         <tr>
                             <td>Дата обновления:</td>
-                                <td>{{ object.date_of_change  }}</td>
+                                <td>{{ card.date_of_change  }}</td>
                         </tr>
                         <tr>
                             <td>Изображение:</td>
-                                <td><img src="{% mediapath cards.preview %}"/></td>
+                                <td><img src='{% mediapath card.preview %}' width="155" height="120"/></td>
                         </tr>
 
                     </table>
