--- a/catalog/templates/main/menu.html
+++ b/catalog/templates/main/menu.html
@@ -40,6 +40,14 @@
                     Контакты
                 </a>
             </li>
+            <li>
+                <a href="{% url 'catalog:blogs' %}" class="nav-link text-white">
+                    <svg class="bi me-2" width="16" height="16">
+                        <use xlink:href="#speedometer2"/>
+                    </svg>
+                    Блог
+                </a>
+            </li>
         </ul>
         <hr>
         <div class="dropdown">
