--- a/catalog/templates/main/card.html
+++ b/catalog/templates/main/card.html
@@ -8,31 +8,31 @@
                     <table class="table table-dark table-sm">
                         <tr>
                             <td>Название продукта</td>
-                            <td>{{ card.name }} </td>
+                            <td>{{ object.name }} </td>
                         </tr>
                         <tr>
                             <td>Описание продукта</td>
-                            <td>{{ card.description }}</td>
+                            <td>{{ object.description }}</td>
                         </tr>
                         <tr>
                             <td>Категория</td>
-                            <td>{{ card.category }}</td>
+                            <td>{{ object.category }}</td>
                         </tr>
                         <tr>
                             <td>Цена продукта:</td>
-                            <td>{{ card.price }}</td>
+                            <td>{{ object.price }}</td>
                         </tr>
                         <tr>
                             <td>Дата добавления:</td>
-                            <td>{{ card.creation_date}}</td>
+                            <td>{{ object.creation_date}}</td>
                         </tr>
                         <tr>
                             <td>Дата обновления:</td>
-                                <td>{{ card.date_of_change  }}</td>
+                                <td>{{ object.date_of_change  }}</td>
                         </tr>
                         <tr>
                             <td>Изображение:</td>
-                                <td><img src='{% mediapath card.preview %}' width="155" height="120"/></td>
+                                <td><img src='{% mediapath object.preview %}' width="155" height="120"/></td>
                         </tr>
 
                     </table>
