--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -25,7 +25,7 @@
 <body>
 <div class="container-fluid h-100">
     <div class="row h-100">
-    {% include 'main/menu.html' %}
+    {% include 'catalog/menu.html' %}
         {% block content %}
         {% endblock %}
     </div>
