--- a/catalog/templates/catalog/blog_detail.html
+++ b/catalog/templates/catalog/blog_detail.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'catalog/base.html' %}
 {% block content %}
     <div class="container">
         <h4 class="bg-info">Заголовок: {{ object.name }}</h4>
