--- a/catalog/templates/catalog/blog_update.html
+++ b/catalog/templates/catalog/blog_update.html
@@ -1,11 +1,11 @@
-{% extends 'main/base.html' %}
+{% extends 'catalog/base.html' %}
 
 {% block title %} {% endblock %}
 
 {% block content %}
 
     <div class="container">
-        <h1 class="text-warning">Форма создания поста</h1>
+        <h1 class="text-warning">Форма изменения поста</h1>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <table>
@@ -14,6 +14,7 @@
             <input class="btn-success" type="submit" value="Изменить">
             <a type="button" href="{% url 'catalog:delete_blog' object.slug %}"
                class="btn btn-lg btn-block btn-danger">Удалить</a>
+
         </form>
     </div>
 {% endblock %}
